// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES TRACE LEVELS trace 1 NATIVE 1`] = `
<div>
  <div
    style="margin: 10px; padding: 10px; background-color: gray;"
  >
    traceLevel=1
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 1 WEB 1`] = `
<div>
  <div
    class="b a"
    style="margin: 10px;"
  >
    traceLevel=1
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 NATIVE 1`] = `
<div>
  <div
    style="margin: 10px; padding: 10px; background-color: gray;"
    trace="
margin: 10 /*styleX*/
padding: 10 /*classNameX*/
backgroundColor: gray /*TestComponent.sheet.root*/"
  >
    traceLevel=2
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 WEB 1`] = `
<div>
  <div
    class="b a"
    style="margin: 10px;"
    trace="
.b { padding:10px /*classNameX*/ }
.a { background-color:gray /*TestComponent.sheet.root*/ }"
  >
    traceLevel=2
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 NATIVE 1`] = `
<div>
  <div
    style="margin: 10px; padding: 10px; background-color: gray;"
    trace="
margin: 10 /*styleX*/
padding: 10 /*classNameX*/
backgroundColor: gray /*TestComponent.sheet.root*/"
  >
    traceLevel=3
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 WEB 1`] = `
<div>
  <div
    class="b a"
    style="margin: 10px;"
    trace="
.b { padding:10px /*classNameX*/ }
.a { background-color:gray /*TestComponent.sheet.root*/ }"
  >
    traceLevel=3
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 NATIVE 1`] = `
<div>
  <div
    style="margin: 10px; padding: 10px; background-color: gray;"
    trace="
margin: 10 /*styleX*/
padding: 10 /*classNameX*/
backgroundColor: gray /*TestComponent.sheet.root*/"
  >
    traceLevel=4
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 WEB 1`] = `
<div>
  <div
    class="b a"
    style="margin: 10px;"
    trace="
.b { padding:10px /*classNameX*/ }
.a { background-color:gray /*TestComponent.sheet.root*/ }"
  >
    traceLevel=4
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 NATIVE 1`] = `
<div>
  <div
    style="margin: 10px; padding: 10px; background-color: gray;"
    trace="
margin: 10 /*styleX*/
padding: 10 /*classNameX*/
backgroundColor: gray /*TestComponent.sheet.root*/"
  >
    traceLevel=5
  </div>
</div>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 WEB 1`] = `
<div>
  <div
    class="b a"
    style="margin: 10px;"
    trace="
.b { padding:10px /*classNameX*/ }
.a { background-color:gray /*TestComponent.sheet.root*/ }"
  >
    traceLevel=5
  </div>
</div>
`;
